profile pics no longer stretched

--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -823,6 +823,7 @@ a:active {
 }
 
 .small-pp {
+  object-fit: cover;
   display: none;
   width: 42px;
   height: 42px;
@@ -846,6 +847,7 @@ a:active {
 }
 
 .large-pp {
+  object-fit: cover;
   width: 126px;
   height: 126px;
   border: 3px solid var(--color-highlightgray);
